--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ description: Identity Security Expert, Automation Engineer, ADMS Specialist, Pow
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
+baseurl: ""
