--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: AJ Lindner
-description: Identity Security Expert, Automation Engineer, ADMS Specialist, Powershell Enthusiast
+description: Identity Security Expert, Automation Engineer, Active Directory Specialist, Powershell Enthusiast
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
