--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: AJ Lindner
 description: Identity Security Expert, Automation Engineer, Active Directory Specialist, Powershell Enthusiast
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-hacker
 baseurl: ""
 github:
   is_project_page: false
